--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "build:all": "eas build --platform all --non-interactive",
     "submit:android": "eas submit --platform android",
     "submit:ios": "eas submit --platform ios",
-    "license": "license-report --only=prod --output=table",
     "release": "commit-and-tag-version --release-as ",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3",
-    "@fortawesome/free-brands-svg-icons": "^6.3",
-    "@fortawesome/free-solid-svg-icons": "^6.3",
+    "@fortawesome/fontawesome-svg-core": "^6.4",
+    "@fortawesome/free-brands-svg-icons": "^6.4",
+    "@fortawesome/free-solid-svg-icons": "^6.4",
     "@fortawesome/react-native-fontawesome": "^0.3",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.6",
@@ -43,7 +42,7 @@
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-linking": "~4.0.1",
-    "expo-notifications": "~0.18.0",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -51,20 +50,19 @@
     "react-native-dialog": "^9.3",
     "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-get-random-values": "^1.8",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-root-toast": "^3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.18.11",
     "react-native-webview": "11.26.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "commit-and-tag-version": "^11.0",
-    "eas-cli": "^3.7",
-    "license-report": "^6.3",
+    "eas-cli": "^3.10",
     "standard-version-expo": "^1.0"
   }
 }
