--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "license": "Apache-2.0",
-  "version": "0.22.0",
+  "version": "0.23.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/subadapcocuk/subadapp.git"
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "start": "expo start",
+    "fix": "expo install --fix",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -32,37 +33,38 @@
     "@fortawesome/free-brands-svg-icons": "^6.4",
     "@fortawesome/free-solid-svg-icons": "^6.4",
     "@fortawesome/react-native-fontawesome": "^0.3",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/slider": "4.4.2",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/drawer": "^6.6",
     "@react-navigation/native": "^6.1",
-    "expo": "^49",
-    "expo-av": "~13.4.1",
-    "expo-constants": "~14.4.2",
-    "expo-device": "~5.4.0",
-    "expo-linking": "~5.0.2",
-    "expo-notifications": "~0.20.1",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50",
+    "expo-av": "~13.10.3",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
+    "expo-linking": "~6.2.2",
+    "expo-notifications": "~0.27.4",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.73.2",
     "react-native-dialog": "^9.3",
     "react-native-elements": "^3.4",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "~1.9.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-root-toast": "^3.4",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-root-toast": "^3.5",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/metro-runtime": "^3.1",
     "@mccraveiro/standard-version-expo": "^2.0",
-    "commit-and-tag-version": "^11.0",
-    "eas-cli": "^4.0"
+    "commit-and-tag-version": "^12.0",
+    "eas-cli": "^5.0"
   }
 }
