--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,13 +9,18 @@ jobs:
     name: Build Android
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          node-version: 20.x
-          cache: yarn
+          java-version: 17
+          distribution: temurin
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'yarn'
       - uses: expo/expo-github-action@v8
         with:
           eas-version: latest
