--- a/package.json
+++ b/package.json
@@ -29,42 +29,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4",
-    "@fortawesome/free-brands-svg-icons": "^6.4",
-    "@fortawesome/free-solid-svg-icons": "^6.4",
+    "@fortawesome/fontawesome-svg-core": "^6.5",
+    "@fortawesome/free-brands-svg-icons": "^6.5",
+    "@fortawesome/free-solid-svg-icons": "^6.5",
     "@fortawesome/react-native-fontawesome": "^0.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/slider": "4.4.2",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6",
     "@react-navigation/native": "^6.1",
-    "expo": "^50",
-    "expo-av": "~13.10.3",
-    "expo-constants": "~15.4.5",
-    "expo-device": "~5.9.3",
-    "expo-linking": "~6.2.2",
-    "expo-notifications": "~0.27.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51",
+    "expo-av": "~14.0.5",
+    "expo-constants": "~16.0.1",
+    "expo-device": "~6.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.3",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-dialog": "^9.3",
     "react-native-elements": "^3.4",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "~1.8.0",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-root-toast": "^3.5",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-root-toast": "^3.6",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "^3.1",
+    "@expo/metro-runtime": "~3.2.1",
     "@mccraveiro/standard-version-expo": "^2.0",
     "commit-and-tag-version": "^12.0",
-    "eas-cli": "^7.0"
+    "eas-cli": "^9.0"
   }
 }
