--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "ŞubadApp",
     "slug": "subadapp",
-    "version": "0.24.1",
+    "version": "0.24.2",
     "description": "",
     "scheme": "subadapp",
     "githubUrl": "https://github.com/subadapcocuk/subadapp",
@@ -31,7 +31,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "0.24.1",
+      "buildNumber": "0.24.2",
       "bundleIdentifier": "subadapp",
       "config": {
         "usesNonExemptEncryption": false
@@ -39,7 +39,9 @@
       "appStoreUrl": "https://apps.apple.com/tr/app/%C5%9Fubadapp/id1669825799",
       "infoPlist": {
         "NSMicrophoneUsageDescription": "This app doesn't use the microphone, this permission is required for Audio playing.",
-        "UIBackgroundModes": ["audio"]
+        "UIBackgroundModes": [
+          "audio"
+        ]
       },
       "privacyManifests": {
         "NSPrivacyAccessedAPITypes": [
@@ -80,7 +82,7 @@
         "android.permission.RECORD_AUDIO"
       ],
       "package": "org.subadapp",
-      "versionCode": 510002401,
+      "versionCode": 520002402,
       "playStoreUrl": "https://play.google.com/store/apps/details?id=org.subadapp"
     },
     "extra": {
