--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,14 @@
 {
   "cli": {
-    "version": ">= 6.0.0"
+    "version": ">= 10.0.0",
+    "appVersionSource": "local"
   },
   "build": {
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "development": {
       "developmentClient": true,
       "distribution": "internal",
