--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:android": "eas build --platform android --non-interactive",
+    "build:apk": "eas build --platform android --profile preview",
     "build:ios": "eas build --platform ios --non-interactive",
     "build:all": "eas build --platform all --non-interactive",
     "submit:android": "eas submit --platform android",
@@ -37,6 +38,7 @@
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.0",
+    "@react-navigation/material-top-tabs": "^7.0.5",
     "@react-navigation/native": "^7.0",
     "expo": "^52",
     "expo-av": "~15.0.1",
@@ -52,6 +54,7 @@
     "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-pager-view": "6.4.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6",
     "react-native-safe-area-context": "4.12.0",
@@ -63,7 +66,6 @@
   "devDependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@mccraveiro/standard-version-expo": "^2.0",
-    "commit-and-tag-version": "^12.0",
-    "eas-cli": "^13.0"
+    "commit-and-tag-version": "^12.0"
   }
 }
