--- a/package.json
+++ b/package.json
@@ -37,31 +37,30 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/drawer": "^7.0",
-    "@react-navigation/material-top-tabs": "^7.0.5",
     "@react-navigation/native": "^7.0",
-    "expo": "^52",
+    "expo": "~52.0.11",
     "expo-av": "~15.0.1",
     "expo-constants": "~17.0.3",
     "expo-device": "~7.0.1",
     "expo-linking": "~7.0.2",
-    "expo-notifications": "~0.29.8",
+    "expo-notifications": "~0.29.9",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-dialog": "^9.3",
-    "react-native-elements": "^3.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-pager-view": "6.4.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.12.4"
+    "react-native-webview": "13.12.2"
   },
   "devDependencies": {
     "@expo/metro-runtime": "~4.0.0",
