--- a/package.json
+++ b/package.json
@@ -38,17 +38,15 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^7.2.1",
-    "@react-navigation/drawer": "^7.1.2",
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/bottom-tabs": "^7.3.7",
+    "@react-navigation/drawer": "^7.3.6",
+    "@react-navigation/native": "^7.1.3",
     "expo": "~52.0.42",
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
-    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
@@ -56,12 +54,11 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.7",
-    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "toastify-react-native": "^7.1.1"
   },
   "devDependencies": {
     "@expo/metro-runtime": "~4.0.1",
