--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.3.9",
@@ -41,8 +42,11 @@
     "expo-av": "~15.0.2",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
+    "expo-file-system": "^18.0.12",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
+    "expo-status-bar": "~2.0.1",
+    "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
