--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "license": "Apache-2.0",
-  "version": "0.26.5",
+  "version": "0.26.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/subadapcocuk/subadapp.git"
@@ -54,6 +54,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.7",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
