--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-native-get-random-values": "~1.11.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.7",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
@@ -64,6 +64,6 @@
   "devDependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@mccraveiro/standard-version-expo": "^2.0.5",
-    "commit-and-tag-version": "^12.5.0"
+    "commit-and-tag-version": "^12.5.1"
   }
 }
